# conduit

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: conduit-ci.yml
apps/broker/: main.c
apps/embedded_sample/: main.c
apps/loadgen/: main.c
docs/: API_CONTRACT.md  ARCHITECTURE.md  PROJECT_PLAN.md  PROPOSAL.md  THREADING.md  TOPIC_CATALOG.md
include/conduit/: bus.h  conduit.h  context.h  transport.h  transport_inproc.h  transport_ipc.h  transport_ipc_socket.h  types.h
scripts/ci/: capture_loadgen_profile.sh
src/: bus.c  context.c  core.c  internal.h  sync.c  transport_inproc.c  transport_ipc.c  transport_ipc_socket.c
tests/: test_main.c
